--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <form>
+      <input type="email"><br>
+       <input type="text" ><br>
+        <input type="submit" name="send">
+    </form>
 </body>
 </html></1>
